--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,7 @@
 /GroupController.class
+/GroupController$1.class
+/ChatApp$1.class
+/ChatApp$2.class
+/ChatApp$3.class
+/ChatApp$4.class
+/ChatApp$5.class
