--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,21 +1,2 @@
-/ChatApp$1.class
-/ChatApp$2.class
-/ChatApp$3.class
-/ChatApp$4.class
-/ChatApp$5.class
-/ChatApp.class
-/DataSend.class
-/Group.class
-/GroupController.class
-/GroupController$1.class
-/User.class
-/Login$1.class
-/Login$2.class
-/Login.class
-/Register$1.class
-/Register$2.class
-/Register$3.class
-/Register.class
-/DBController.class
-
-/GroupController$2.class
+/GroupInformation$2.class
+/TestEqual.class
