--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="JTattoo-1.6.11.jar"/>
-	<classpathentry kind="lib" path="C:/Users/lim_5/OneDrive/Documents/GitHub/ICT2107_WhatsChat_Project/mysql-connector-java-8.0.15.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="lib" path="JTattoo-1.6.11.jar"/>
+	<classpathentry exported="true" kind="lib" path="mysql-connector-java-8.0.15.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
